--- a/Milestone 1 portfolio/Module-3/styles/color.css
+++ b/Milestone 1 portfolio/Module-3/styles/color.css
@@ -1,3 +1,12 @@
+div{
+    /* border: 3px solid blueviolet; */
+    margin-bottom: 10px;
+    margin-right: 10px;
+    padding: 2%;
+    box-shadow: 10px 5px 15px brown;
+
+}
+
 h1{
     font-family: 'Times New Roman', Times, serif;
     background-color: burlywood;
