little more responsive now

--- a/Milestone 2 Responsive website layout/Module 8/collage.css
+++ b/Milestone 2 Responsive website layout/Module 8/collage.css
@@ -9,7 +9,7 @@ img{
     margin-top: 10px;
 }
 .row  div{
-    flex: 1;
+    flex: 1; /* row e joto div ache tara shobai same jaiga nibe*/
 }
 .double-collage img{
     height: calc((100% - 5px)/2);
@@ -19,5 +19,26 @@ img{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
+}
 
+/* Media Query */
+
+@media screen and  (max-width: 576px){
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+    .square-collage{
+        grid-template-columns: 1fr;
+    }
+}
+
+/* medium Device */
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+    
 }
